--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,13 @@
   margin: 0 auto;
   grid-template-areas: 
   "h h"
+  "b b"
   "n c";
 
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
 
+  background-color: rgb(107, 43, 226);
   
 }
 
