--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,8 +1,6 @@
 .content{
     grid-area: c;
-    background-color: chocolate;
-    height: 100vh;
-    margin: 10px 10px 10px 10px;
+    height: 100%;
 }
 
 .content img{
