--- a/src/components/common/FormsControle.module.css
+++ b/src/components/common/FormsControle.module.css
@@ -1,10 +1,14 @@
 .formControl.error input,
 .formControl.error textarea
 {
-    border: solid red 2px;
+    border: solid rebeccapurple 2px;
 }
 
 .formControl.error span
 {
-    color: red;
+    color: rebeccapurple;
+}
+
+.formError{
+    color: rebeccapurple;
 }
